# VulkanMinimal

./: CMakeLists.txt  README.md
applications/: application_compute.cpp
cmake/modules/: AddSubLibrary.cmake  CompileShaders.cmake  FindVulkan.cmake  GenerateExecutables.cmake
framework/include/: debug_reporter.hpp
framework/source/: debug_reporter.cpp
utils/: VulkanMinimal.sublime-project
